--- a/index.html
+++ b/index.html
@@ -51,24 +51,23 @@
     </nav>
     
     <!-- Main Section with padding to avoid being hidden under the navbar -->
-    <div class="pt-24 grid grid-cols-2 gap-4 place-content-around md:px-24 py-16 md:space-y-0" id="home">
-        <div class="max-w-lg space-y-4 text-center md:text-left p-12 bg-slate-200 rounded-3xl shadow-xl shadow-gray-500 hover:shadow-gray-700">
+    <div class="pt-32 grid grid-cols-1 md:grid-cols-2 gap-4 place-content-around md:px-24 py-16 md:space-y-0" id="home">
+        <div class="max-w-lg space-y-4 text-center md:text-left p-12 bg-slate-200 rounded-3xl shadow-xl shadow-gray-500 hover:shadow-gray-700 mx-auto md:mx-0">
             <p class="text-xl text-gray-700">Hi I am</p>
             <h1 class="text-5xl font-bold text-orange-500">Lathika Priya</h1>
             <h2 class="text-4xl font-bold text-gray-900">2nd Year CS Student</h2>
 
             <a href="https://github.com/Lathika-Priya" class="p-20">
-                <div class="flex"><img src="github.png" target="_blank" class="h-8 pr-4 hover:underline" >Lathika-Priya</div>
+                <div class="flex justify-center md:justify-start"><img src="github.png" target="_blank" class="h-8 pr-4 hover:underline">Lathika-Priya</div>
             </a>
-            <div class="flex"><img src="location.png" target="_blank" class="h-8 pr-4 hover:underline" >Vizianagaram, Andhra Pradesh</div>
-
-        </div>
-        
-        <div class="flex justify-self-center lg:pr-40 md:block">
-            <img src="me.jpg" alt="Profile Image" class="rounded-full w-80 h-100 md:w-80 md:h-100 object-cover shadow-xl shadow-gray-500 hover:shadow-gray-700">
+            <div class="flex justify-center md:justify-start"><img src="location.png" target="_blank" class="h-8 pr-4 hover:underline">Vizianagaram, Andhra Pradesh</div>
         </div>
 
+        <div class="flex justify-center md:justify-end lg:pr-40">
+            <img src="me.jpg" alt="Profile Image" class="rounded-full w-60 h-60 md:w-80 md:h-80 object-cover shadow-xl shadow-gray-500 hover:shadow-gray-700">
+        </div>
     </div>
+
 
     <div class="text-gray-800" id="about">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
