--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
     <!-- Main Section with padding to avoid being hidden under the navbar -->
     <div class="pt-32 grid grid-cols-1 md:grid-cols-2 gap-4 place-content-around md:px-24 py-16 md:space-y-0" id="home">
-        <div class="max-w-lg space-y-4 text-center md:text-left p-12 bg-slate-200 rounded-3xl shadow-xl shadow-gray-500 hover:shadow-gray-700 mx-auto md:mx-0">
+        <div class="max-w-lg space-y-4 text-center md:text-left p-12 bg-slate-200 rounded-3xl shadow-xl shadow-gray-500 hover:shadow-gray-700 mx-auto md:mx-2 md:h-48">
             <p class="text-xl text-gray-700">Hi I am</p>
             <h1 class="text-5xl font-bold text-orange-500">Lathika Priya</h1>
             <h2 class="text-4xl font-bold text-gray-900">2nd Year CS Student</h2>
